--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toBottomOf="@id/logo"
         android:orientation="vertical"
         android:showDividers="middle"
-        android:divider="@drawable/divider">
+        android:divider="@drawable/divider_16dp">
 
         <EditText android:id="@+id/email"
             android:layout_width="match_parent"
@@ -61,7 +61,7 @@
         android:layout_marginBottom="16dp"
         android:orientation="vertical"
         android:showDividers="middle"
-        android:divider="@drawable/divider">
+        android:divider="@drawable/divider_16dp">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/auth"
